- Ability to serialize and reload translator tests from translator tester (addresses #1842, Translator unit test automation) - Fix a spacing issue in preferences

--- a/common/preferences/preferences.css
+++ b/common/preferences/preferences.css
@@ -35,6 +35,7 @@ body {
 	display: table-cell;
 	vertical-align: middle;
 	padding-left: 12px;
+	padding-top: 3px;
 }
 
 .pane-label {
